<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_24dp"
            android:title="@string/nav_profile"/>

        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_stories_24dp"
            android:title="@string/nav_mystories"/>

        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/nav_settings" />

    </group>
</menu>