<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.user.onceuponatime.activity.PostStory">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <EditText
            android:id="@+id/storyTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/titleInput"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            tools:hint="Title"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bodyTextInput"
        android:layout_width="0dp"
        android:layout_height="243dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextInput">

        <EditText
            android:id="@+id/storyBodyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/storyBodyInput"
            android:maxLines="20"
            android:textColor="@color/colorAccent"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/privacyStorySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:switchPadding="@dimen/padding_switch"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/privacyStorySwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyTextInput"
        />

    <Button
        android:id="@+id/postButton"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent"
        android:text="@string/postButton"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacyStorySwitch" />

</android.support.constraint.ConstraintLayout>
